# tis-inventory-system

./: Cargo.toml
migrations/: 0001_users_table.sql
src/: app_state.rs  config.rs  db_functions.rs  error.rs  main.rs
src/controllers/: auth.rs
src/middlewares/: jwt_auth.rs
src/models/: auth.rs
